--- a/MS-VS-Tests-Authority/MS-VS-Tests-Authority/MS-VS-Tests-Authority.csproj
+++ b/MS-VS-Tests-Authority/MS-VS-Tests-Authority/MS-VS-Tests-Authority.csproj
@@ -60,8 +60,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LoginData.cs" />
     <Compile Include="UserCreateTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
