--- a/MS-VS-Tests-Authority/MS-VS-Tests-Authority/MS-VS-Tests-Authority.csproj
+++ b/MS-VS-Tests-Authority/MS-VS-Tests-Authority/MS-VS-Tests-Authority.csproj
@@ -60,10 +60,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountData.cs" />
     <Compile Include="LoginData.cs" />
     <Compile Include="UserCreateTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserData.cs" />
+    <Compile Include="UserRemovalTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
