--- a/MS-VS-Tests-Authority/MS-VS-Tests-Authority/MS-VS-Tests-Authority.csproj
+++ b/MS-VS-Tests-Authority/MS-VS-Tests-Authority/MS-VS-Tests-Authority.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="AccountData.cs" />
     <Compile Include="LoginData.cs" />
+    <Compile Include="TestBase.cs" />
     <Compile Include="UserCreateTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserData.cs" />
