--- a/MS-VS-Tests-Authority/MS-VS-Tests-Authority/MS-VS-Tests-Authority.csproj
+++ b/MS-VS-Tests-Authority/MS-VS-Tests-Authority/MS-VS-Tests-Authority.csproj
@@ -62,10 +62,13 @@
   <ItemGroup>
     <Compile Include="AccountData.cs" />
     <Compile Include="LoginData.cs" />
+    <Compile Include="LoginLogoutHelper.cs" />
+    <Compile Include="NavigationHelper.cs" />
     <Compile Include="TestBase.cs" />
     <Compile Include="UserCreateTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserData.cs" />
+    <Compile Include="UserHelper.cs" />
     <Compile Include="UserRemovalTest.cs" />
   </ItemGroup>
   <ItemGroup>
