--- a/MS-VS-Tests-Authority/MS-VS-Tests-Authority/MS-VS-Tests-Authority.csproj
+++ b/MS-VS-Tests-Authority/MS-VS-Tests-Authority/MS-VS-Tests-Authority.csproj
@@ -60,16 +60,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountData.cs" />
-    <Compile Include="LoginData.cs" />
-    <Compile Include="LoginLogoutHelper.cs" />
-    <Compile Include="NavigationHelper.cs" />
-    <Compile Include="TestBase.cs" />
-    <Compile Include="UserCreateTests.cs" />
+    <Compile Include="AppManager\ApplicationManager.cs" />
+    <Compile Include="AppManager\HelperBase.cs" />
+    <Compile Include="Model\LoginData.cs" />
+    <Compile Include="AppManager\LoginLogoutHelper.cs" />
+    <Compile Include="AppManager\NavigationHelper.cs" />
+    <Compile Include="Tests\TestBase.cs" />
+    <Compile Include="Tests\UserCreateTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserData.cs" />
-    <Compile Include="UserHelper.cs" />
-    <Compile Include="UserRemovalTest.cs" />
+    <Compile Include="Model\UserData.cs" />
+    <Compile Include="AppManager\UserHelper.cs" />
+    <Compile Include="Tests\UserRemovalTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
@@ -80,6 +81,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
