--- a/MS-VS-Tests-Authority/MS-VS-Tests-Authority/packages.config
+++ b/MS-VS-Tests-Authority/MS-VS-Tests-Authority/packages.config
@@ -3,6 +3,7 @@
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net471" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net471" />
   <package id="NUnit" version="2.6.4" targetFramework="net471" />
+  <package id="NUnitTestAdapter" version="2.1.1" targetFramework="net461" />
   <package id="Selenium.Support" version="3.14.0" targetFramework="net471" />
   <package id="Selenium.WebDriver" version="3.14.0" targetFramework="net471" />
   <package id="WebDriverChromeDriver" version="2.10" targetFramework="net471" />
